--- a/app/src/main/res/layout/activity_payments.xml
+++ b/app/src/main/res/layout/activity_payments.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#fff"
-    android:padding="20dp"
     tools:context="com.mabnets.kilicom.Payments">
     <ScrollView
         android:layout_width="match_parent"
@@ -26,13 +25,41 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="PAYBILL NUMBER :XXXX"
+            android:text="TILL NUMBER :5217941"
             android:textSize="25sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" "
+            android:text="How to pay"
+            android:textColor="#ff4500"
             android:textSize="25sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/step1"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/step2"
+            android:layout_gravity="left"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/step3"
+            android:layout_gravity="left"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/step4"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
+
 
         <Button
             android:id="@+id/paynow"
@@ -41,6 +68,7 @@
             android:background="@drawable/button_shaper"
             android:text="paynow"
             android:textColor="#fff"
+            android:visibility="gone"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"
             />
